--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,29 @@
 [package]
 name = "get-a-job-dioxus"
 version = "0.1.0"
+authors = ["347Online | Katie Janzen <katiejanzen@347online.me>"]
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
+wasm-bindgen = "=0.2.97"
+dioxus = { version = "0.6.0", features = [] }
+
+[features]
+default = ["web"]
+web = ["dioxus/web"]
+desktop = ["dioxus/desktop"]
+mobile = ["dioxus/mobile"]
+
+[profile]
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
