--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,16 @@ edition = "2021"
 
 [dependencies]
 wasm-bindgen = "=0.2.97"
-dioxus = { version = "0.6.0", features = [] }
+dioxus = { version = "0.6.0", features = ["fullstack"] }
+reqwest = { version = "0.12.12", features = ["json"] }
+serde = { version = "1.0.217", features = ["derive"] }
 
 [features]
-default = ["web"]
+default = []
 web = ["dioxus/web"]
 desktop = ["dioxus/desktop"]
 mobile = ["dioxus/mobile"]
+server = ["dioxus/server"]
 
 [profile]
 
